website/i18n/zh-hant/docusaurus-plugin-content-docs/version-0.70/_integration-with-existing-apps-swift.md
## 核心概念

將 React Native 元件整合至 iOS 應用程式的關鍵步驟如下：

1. 設定 React Native 依賴項與目錄結構。
2. 確認應用程式中將使用的 React Native 元件。
3. 使用 CocoaPods 添加這些元件作為依賴項。
4. 以 JavaScript 開發 React Native 元件。
5. 在 iOS 應用程式中加入 `RCTRootView`，此視圖將作為 React Native 元件的容器。
6. 啟動 React Native 伺服器並運行原生應用程式。
7. 驗證應用程式中 React Native 功能是否如預期運作。

## 必要條件

請依照[環境設定指南](environment-setup)中的 React Native CLI 快速入門，配置開發環境以建置 iOS 版 React Native 應用程式。

### 1. 設定目錄結構

為確保流程順暢，請為整合的 React Native 專案建立新資料夾，並將現有的 iOS 專案複製到 `/ios` 子資料夾中。

### 2. 安裝 JavaScript 依賴項

進入專案的根目錄，建立包含以下內容的新 `package.json` 檔案：

```
{
  "name": "MyReactNativeApp",
  "version": "0.0.1",
  "private": true,
  "scripts": {
    "start": "yarn react-native start"
  }
}
```

接著，請確認已[安裝 yarn 套件管理工具](https://yarnpkg.com/lang/en/docs/install/)。

安裝 `react` 與 `react-native` 套件。開啟終端機或命令提示字元，導航至包含 `package.json` 的目錄並執行：

```shell
$ yarn add react-native
```

此操作將輸出類似以下的訊息（請向上滾動 yarn 輸出以查看）：

> 警告："react-native@0.52.2" 有未滿足的 peer 依賴項 "react@16.2.0"。

這是正常的，表示我們還需要安裝 React：

```shell
$ yarn add react@version_printed_above
```

Yarn 已建立新的 `/node_modules` 資料夾，此資料夾儲存建置專案所需的所有 JavaScript 依賴項。

請將 `node_modules/` 加入你的 `.gitignore` 檔案中。

### 3. 安裝 CocoaPods

[CocoaPods](http://cocoapods.org) 是 iOS 與 macOS 開發的套件管理工具，我們用它將實際的 React Native 框架程式碼本地化加入現有專案。

建議使用 [Homebrew](http://brew.sh/) 安裝 CocoaPods。

```shell
$ brew install cocoapods
```

> 技術上可以不使用 CocoaPods，但這需要手動添加函式庫與連結器，會使流程過度複雜化。

## 將 React Native 加入應用程式

假設[待整合的應用程式](https://github.com/JoelMarcey/swift-2048)是 [2048](https://en.wikipedia.org/wiki/2048_%28video_game%29) 遊戲。以下是未整合 React Native 時原生應用程式的主選單畫面。

![整合 RN 前](/docs/assets/react-native-existing-app-integration-ios-before.png)

### Xcode 命令列工具

請安裝命令列工具。在 Xcode 選單中選擇「Preferences...」，進入 Locations 面板後，從 Command Line Tools 下拉選單中選擇最新版本進行安裝。

![Xcode 命令列工具](/docs/assets/GettingStartedXcodeCommandLineTools.png)

### 配置 CocoaPods 依賴項

在將 React Native 整合至應用程式前，需先決定要整合框架中的哪些部分。我們將使用 CocoaPods 來指定應用程式依賴的這些「子規格」(subspecs)。

The list of supported `subspec`s is available in [`/node_modules/react-native/React.podspec`](https://github.com/facebook/react-native/blob/0.70-stable/React.podspec). They are generally named by functionality. For example, you will generally always want the `Core` `subspec`. That will get you the `AppRegistry`, `StyleSheet`, `View` and other core React Native libraries. If you want to add the React Native `Text` library (e.g., for `<Text>` elements), then you will need the `RCTText` `subspec`. If you want the `Image` library (e.g., for `<Image>` elements), then you will need the `RCTImage` `subspec`.

You can specify which `subspec`s your app will depend on in a `Podfile` file. The easiest way to create a `Podfile` is by running the CocoaPods `init` command in the `/ios` subfolder of your project:

```shell
$ pod init
```

The `Podfile` will contain a boilerplate setup that you will tweak for your integration purposes.

> The `Podfile` version changes depending on your version of `react-native`. Refer to https://react-native-community.github.io/upgrade-helper/ for the specific version of `Podfile` you should be using.

最終，您的 `Podfile` 應類似以下內容：

```
source 'https://github.com/CocoaPods/Specs.git'

# Required for Swift apps
platform :ios, '8.0'
use_frameworks!

# The target name is most likely the name of your project.
target 'swift-2048' do

  # Your 'node_modules' directory is probably in the root of your project,
  # but if not, adjust the `:path` accordingly
  pod 'React', :path => '../node_modules/react-native', :subspecs => [
    'Core',
    'CxxBridge', # Include this for RN >= 0.47
    'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
    'RCTText',
    'RCTNetwork',
    'RCTWebSocket', # needed for debugging
    # Add any other subspecs you want to use in your project
  ]
  # Explicitly include Yoga if you are using RN >= 0.42.0
  pod "Yoga", :path => "../node_modules/react-native/ReactCommon/yoga"

  # Third party deps podspec link
  pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'

end
```

建立 `Podfile` 後，即可安裝 React Native 的 pod。

```shell
$ pod install
```

您應會看到類似以下的輸出：

```
Analyzing dependencies
Fetching podspec for `React` from `../node_modules/react-native`
Downloading dependencies
Installing React (0.62.0)
Generating Pods project
Integrating client project
Sending stats
Pod installation complete! There are 3 dependencies from the Podfile and 1 total pod installed.
```

> 若因提及 `xcrun` 的錯誤而失敗，請確認在 Xcode 的 **Preferences > Locations** 中已指定 Command Line Tools。

> If you get a warning such as "_The `swift-2048 [Debug]` target overrides the `FRAMEWORK_SEARCH_PATHS` build setting defined in `Pods/Target Support Files/Pods-swift-2048/Pods-swift-2048.debug.xcconfig`. This can lead to problems with the CocoaPods installation_", then make sure the `Framework Search Paths` in `Build Settings` for both `Debug` and `Release` only contain `$(inherited)`.

### 程式碼整合

現在我們將實際修改原生 iOS 應用程式以整合 React Native。針對我們的 2048 範例應用，我們將加入一個以 React Native 實作的「高分」畫面。

#### React Native 元件

我們要編寫的第一段程式碼是新「高分」畫面的實際 React Native 程式碼，它將被整合到我們的應用程式中。

##### 1. 建立 `index.js` 檔案

首先，在 React Native 專案的根目錄建立一個空的 `index.js` 檔案。

`index.js` 是 React Native 應用程式的起點，且為必備檔案。它可以是一個小檔案，僅 `require` 其他屬於您 React Native 元件或應用程式的檔案，也可以包含所需的所有程式碼。在我們的案例中，我們會將所有內容放在 `index.js` 中。

##### 2. 加入您的 React Native 程式碼

In your `index.js`, create your component. In our sample here, we will add a `<Text>` component within a styled `<View>`

```jsx
import React from 'react';
import {AppRegistry, StyleSheet, Text, View} from 'react-native';

const RNHighScores = ({scores}) => {
  const contents = scores.map(score => (
    <Text key={score.name}>
      {score.name}:{score.value}
      {'\n'}
    </Text>
  ));
  return (
    <View style={styles.container}>
      <Text style={styles.highScoresTitle}>
        2048 High Scores!
      </Text>
      <Text style={styles.scores}>{contents}</Text>
    </View>
  );
};

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    alignItems: 'center',
    backgroundColor: '#FFFFFF',
  },
  highScoresTitle: {
    fontSize: 20,
    textAlign: 'center',
    margin: 10,
  },
  scores: {
    textAlign: 'center',
    color: '#333333',
    marginBottom: 5,
  },
});

// Module name
AppRegistry.registerComponent('RNHighScores', () => RNHighScores);
```

> `RNHighScores` 是您的模組名稱，當您從 iOS 應用程式中加入一個視圖到 React Native 時會使用此名稱。

#### 魔法所在：`RCTRootView`

現在您的 React Native 元件已透過 `index.js` 建立，您需要將該元件加入新的或現有的 `ViewController` 中。最簡單的方式是選擇性地建立一個通往您元件的事件路徑，然後將該元件加入現有的 `ViewController`。

我們將把 React Native 元件與一個新的原生視圖綁定，這個視圖在 `ViewController` 中實際包含它，稱為 `RCTRootView`。

##### 1. 創建事件路徑

你可以在主遊戲選單中添加一個新連結，導向「高分」的 React Native 頁面。

![事件路徑](/docs/assets/react-native-add-react-native-integration-link.png)

##### 2. 事件處理器

我們現在將從選單連結添加一個事件處理器。一個方法將被添加到你的應用程式的主 `ViewController` 中。這就是 `RCTRootView` 發揮作用的地方。

當你構建一個 React Native 應用程式時，你會使用 [Metro 打包工具][metro] 來創建一個 `index.bundle`，這個檔案將由 React Native 伺服器提供。在 `index.bundle` 中將包含我們的 `RNHighScore` 模組。因此，我們需要將 `RCTRootView` 指向 `index.bundle` 資源的位置（通過 `NSURL`）並將其與模組綁定。

為了調試目的，我們將記錄事件處理器被調用的情況。然後，我們將創建一個字符串，包含存在於 `index.bundle` 中的 React Native 代碼的位置。最後，我們將創建主 `RCTRootView`。請注意，我們提供了 `RNHighScores` 作為 `moduleName`，這是我們在編寫 React Native 元件的代碼時[上面](#the-react-native-component)創建的。

首先 `import` `React` 庫。

```jsx
import React
```

> The `initialProperties` are here for illustration purposes so we have some data for our high score screen. In our React Native component, we will use `this.props` to get access to that data.

```swift
@IBAction func highScoreButtonTapped(sender : UIButton) {
  NSLog("Hello")
  let jsCodeLocation = URL(string: "http://localhost:8081/index.bundle?platform=ios")
  let mockData:NSDictionary = ["scores":
      [
          ["name":"Alex", "value":"42"],
          ["name":"Joel", "value":"10"]
      ]
  ]

  let rootView = RCTRootView(
      bundleURL: jsCodeLocation,
      moduleName: "RNHighScores",
      initialProperties: mockData as [NSObject : AnyObject],
      launchOptions: nil
  )
  let vc = UIViewController()
  vc.view = rootView
  self.present(vc, animated: true, completion: nil)
}
```

> Note that `RCTRootView bundleURL` starts up a new JSC VM. To save resources and simplify the communication between RN views in different parts of your native app, you can have multiple views powered by React Native that are associated with a single JS runtime. To do that, instead of using `RCTRootView bundleURL`, use [`RCTBridge initWithBundleURL`](https://github.com/facebook/react-native/blob/0.70-stable/React/Base/RCTBridge.h#L89) to create a bridge and then use `RCTRootView initWithBridge`.

> When moving your app to production, the `NSURL` can point to a pre-bundled file on disk via something like `let mainBundle = NSBundle(URLForResource: "main" withExtension:"jsbundle")`. You can use the `react-native-xcode.sh` script in `node_modules/react-native/scripts/` to generate that pre-bundled file.

##### 3. 連接

將主選單中的新連結連接到新添加的事件處理器方法。

![事件路徑](/docs/assets/react-native-add-react-native-integration-wire-up.png)

> 其中一種較簡單的方法是打開故事板中的視圖，然後右鍵單擊新連結。選擇類似 `Touch Up Inside` 的事件，將其拖到故事板，然後從提供的列表中選擇創建的方法。

### 測試你的整合

你現在已經完成了將 React Native 與當前應用程式整合的所有基本步驟。現在我們將啟動 [Metro 打包工具][metro] 來構建 `index.bundle` 包，並啟動運行在 `localhost` 上的伺服器來提供它。

##### 1. 添加應用傳輸安全例外

蘋果已經阻止了隱式的明文 HTTP 資源加載。因此，我們需要在項目的 `Info.plist`（或等效）文件中添加以下內容。

```xml
<key>NSAppTransportSecurity</key>
<dict>
    <key>NSExceptionDomains</key>
    <dict>
        <key>localhost</key>
        <dict>
            <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
            <true/>
        </dict>
    </dict>
</dict>
```

> 應用傳輸安全對你的用戶有好處。確保在發布應用程式之前重新啟用它。

##### 2. 運行打包工具

要運行你的應用程式，首先需要啟動開發伺服器。為此，請在你的 React Native 項目的根目錄中運行以下命令：

```shell
$ npm start
```

##### 3. 執行應用程式

若您使用 Xcode 或其他慣用的編輯器，請如常建置並執行您的原生 iOS 應用程式。或者，您也可以透過命令列執行以下指令來啟動應用程式：

```
# From the root of your project
$ npx react-native run-ios
```

在我們的範例應用程式中，您應會看到「高分排行榜」的連結，點擊後即可看到 React Native 元件的渲染畫面。

以下是 _原生_ 應用程式的主畫面：

![主畫面](/docs/assets/react-native-add-react-native-integration-example-home-screen.png)

以下是 _React Native_ 的高分排行榜畫面：

![高分排行榜](/docs/assets/react-native-add-react-native-integration-example-high-scores.png)

> 若執行應用程式時遇到模組解析問題，請參閱 [此 GitHub 議題](https://github.com/facebook/react-native/issues/4968) 以獲取相關資訊與可能的解決方案。[此則留言](https://github.com/facebook/react-native/issues/4968#issuecomment-220941717) 似乎是最新的可行解決方案。

### 接下來呢？

至此，您可如常繼續開發應用程式。請參閱我們的 [除錯指南](debugging) 與 [部署指南](running-on-device) 以深入瞭解 React Native 的開發實務。

[metro]: https://metrobundler.dev/